# SEO

./: .env  1Testfinal.xlsx  2Test.xlsx  8_STEP_EXECUTIVE_DISCOVERY_BUILD_REPORT.md  8_STEP_EXECUTIVE_DISCOVERY_BUILD_SUCCESS.txt  BUILD_COMPLETION_REPORT.md  BUILD_MODE_COMPLETION_REPORT.md  BUILD_MODE_SUCCESS.txt  COMPANIES_HOUSE_SUCCESS_SUMMARY.md  COMPREHENSIVE_20_URL_VALIDATION_BUILD_REPORT.md  COMPREHENSIVE_20_URL_VALIDATION_BUILD_SUCCESS.txt  COMPREHENSIVE_ENHANCED_PIPELINE_COMPLETION_REPORT.md  COMPREHENSIVE_PIPELINE_SUCCESS.txt  COMPREHENSIVE_PRODUCTION_IMPLEMENTATION_SUCCESS.md  COMPREHENSIVE_SYSTEM_ENHANCEMENT_PLAN.md  COMPREHENSIVE_VALIDATION_OPTIMIZATION_REPORT.md  COMPREHENSIVE_VALIDATION_SUCCESS.txt  DIRECTORY_SCRAPERS_SUMMARY.md  ENHANCED_URL_HANDLING_BUILD_REPORT.md  ENHANCED_URL_HANDLING_BUILD_SUCCESS.txt  EXECUTIVE_CONTACT_ENHANCEMENT_PLAN.md  EXECUTIVE_DISCOVERY_ENHANCEMENT_PLAN.md  EXECUTIVE_DISCOVERY_FIX_REPORT.md  EXECUTIVE_EXTRACTION_OVERHAUL_BUILD_REPORT.md  EXECUTIVE_EXTRACTION_OVERHAUL_PLAN.md  EXECUTIVE_EXTRACTION_OVERHAUL_SUCCESS.txt  FINAL_PRODUCTION_TEST_BUILD_REPORT.md  FINAL_PRODUCTION_TEST_BUILD_SUCCESS.txt  MAKE_INTEGRATION_GUIDE.md  NEXT_PHASE_IMPLEMENTATION_PLAN.md  PHASE10_PRODUCTION_READINESS_REPORT.md  PHASE1_BUILD_MODE_COMPLETION_REPORT.md  PHASE1_IMPLEMENTATION_SUCCESS_REPORT.md  PHASE2_BUILD_SUCCESS.txt  PHASE2_IMPLEMENTATION_REPORT.md  PHASE2_SIMPLIFIED_TEST_REPORT_20250623_181357.md  PHASE3_BUILD_SUCCESS.txt  PHASE3_CONFIDENCE_OPTIMIZATION_BUILD_REPORT.md  PHASE4A_BUILD_SUCCESS.txt  PHASE4A_REAL_EXECUTIVE_DISCOVERY_BUILD_REPORT.md  (+252 more)
(+151 files in other folders)
