[tool.poetry]
name = "enrichment-service"
version = "0.1.0"
description = "Lead enrichment service similar to Hunter.io/Clearbit/Apollo.io"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "enrichment_service"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
httpx = "^0.24.0"
aiohttp = "^3.8.0"
asyncio = "^3.4.3"
click = "^8.1.0"
rich = "^13.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
aiosqlite = "^0.19.0"
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
aiosmtplib = "^2.0.0"
dns-python = "^2.3.0"
faker = "^19.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
enrich = "enrichment_service.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 